--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ hostfile = hosts
 deprecation_warnings=False
 retry_files_enabled = False
 retry_files_save_path = ~/.ansible-retry
-Test line
+Added another line
